--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "xiguahome/filesystem",
     "description": "tp6",
     "type": "library",
-    "license": "Apache-2.0",
+    "license": "MIT",
     "authors": [
         {
             "name": "xiguahome",
