--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
             "email": "909993033@qq.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
-        "ext-json": "*",
+        "php": ">=7.1.0",
         "topthink/framework": "^6.0.0",
         "qiniu/php-sdk": "^7.2",
         "aliyuncs/oss-sdk-php": "^2.3",
